--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "install": "^0.13.0",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
     "validator": "^13.9.0"
